--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="layout">firstLayout</string>
+    <string name="rela">relativelayout</string>
+    <string name="text1">textview1</string>
+    <string name="text2">textview2</string>
+    <string name="text3">textview3</string>
 </resources>
